# local-fusion-runtime

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
app/: config.py  fusion.py  main.py  ollama_client.py  prompts.py  router.py  schemas.py
app/providers/: __init__.py  base.py  lmstudio.py  ollama.py
docs/: architecture.md  hardware-profiles.md  models.md  providers.md  roadmap.md
tests/: test_basic.py
