[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "local-fusion-runtime"
version = "0.1.0"
description = "A fully local compound AI runtime that runs multiple small Ollama models in a routed pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ollama", "llm", "local-ai", "compound-ai", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/your-username/local-fusion-runtime"
Repository = "https://github.com/your-username/local-fusion-runtime.git"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
